including an example navbar

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -17,9 +17,10 @@
 // The container relies on the mixins.
 @import "includes/container";
 
+@import "includes/navbar";
+
 // ###############################################################
 // # Do not modify the imports above
 // ###############################################################
 
 // Now we can import anything the project needs, such as:
-// @import "navbar";
