--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -1,10 +1,12 @@
 // Colours
 $primary: #000000;
 $secondary: #ffffff;
+$grey: #e0e0e0;
 
 $colours: (
     "primary": $primary,
     "secondary": $secondary,
+    "grey": $grey,
 );
 
 //
