--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -1,11 +1,13 @@
 // Colours
 $primary: #000000;
-$secondary: #ffffff;
+$black: #000000;
+$white: #ffffff;
 $grey: #e0e0e0;
 
 $colours: (
     "primary": $primary,
-    "secondary": $secondary,
+    "black": $black,
+    "white": $white,
     "grey": $grey,
 );
 
