--- a/design/src/scss/includes/_variables.scss
+++ b/design/src/scss/includes/_variables.scss
@@ -1,11 +1,14 @@
 // Colours
-$primary: #000000;
+$primary: purple;
+$secondary: plum;
+
 $black: #000000;
 $white: #ffffff;
 $grey: #e0e0e0;
 
 $colours: (
     "primary": $primary,
+    "secondary": $secondary,
     "black": $black,
     "white": $white,
     "grey": $grey,
