--- a/www/design/src/scss/components/_navbar.scss
+++ b/www/design/src/scss/components/_navbar.scss
@@ -1,64 +1,111 @@
+$navbar-height: 6.25rem; // this equates to 100 pixels with a default font size of 16px
+
 .navbar {
-    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-        rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    color: black; // text colour
+    // colors
+    background-color: $primary;
+    color: $white;
+    $darker-colour: darken(
+        $color: $primary,
+        $amount: 4%,
+    );
+
+    // make the navbar static at the top of the screen
+    position: fixed;
+    top: 0;
+
+    width: 100%;
+    min-height: $navbar-height;
+
+    // this negates the need for any top and bottom padding, and centers the content
+    display: grid;
+    place-items: center;
+
+    // Emily
+    // This was added, so that the hero image could be initially assigned a z-index of 3
+    // which should then be changed to 1 on either the navbar opening or page scroll
+    z-index: 2;
 
     &__nav {
         // navbar__nav
         // ---
-        // this should normally be coupled with a `container`
+        // this is going to be the actual navbar, this should be coupled with a container
+        // to stop the content from taking up too much of the width of the screen
+        // on a mobile screen, this will display as a flex column (vertical)
+        // and we will center the content horizontally (align-items)
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        padding: 1rem;
+        padding: $global-padding; // this is so the navbar doesn't touch the edges of the screen on a mobile device
     }
 
     &__mobile {
         // navbar__mobile
         // ---
-        //  this is a grouping of the brand text/image and the mobile hamburger menu
+        // this is a grouping of the brand image and the mobile hamburger menu
+        // we need to group them together to stop them from stacking on top of
+        // each other, this should be a horizontal row of items with the content
+        // spaced at either end of the screen
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        height: $navbar-height;
     }
 
     &__brand {
         // navbar__brand
         // ---
-        font-size: 1.5rem;
+        // this is the company logo
+        font-size: 2rem;
+
+        // // The below code is an example for images
+        // min-width: 14.0625rem; // this is 225px at a font size of 16px
+        // width: 100%;
+        // max-width: 17.1875rem; // this is 275px at a font size of 16px
     }
 
     &__hamburger {
         // navbar__hamburger
         // ---
-        font-size: 2rem;
-        padding: 0.5rem 1rem;
+        // this is the menu button for mobiles
+        font-size: 2.5rem;
+        padding: 0 1rem;
         cursor: pointer;
-
-        display: grid;
-        place-items: center;
     }
 
     &__items {
         // navbar__items
         // ---
+        // this is the actualy hyperlinks in/on the navbar
+        // by default, on a mobile screen, these should be hidden
         display: none;
+
+        margin: 1rem 0;
+        width: 100%;
+
+        font-size: 1.1rem; // this is 24px with 16px font
+
+        &.active {
+            // when the navbar is open, we are going to display the contents as a grid
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-flow: row;
+            row-gap: 0.5rem; // this is 8px with 16px font
+            place-items: center;
+        }
     }
 
     &__item {
         // navbar__item
         // ---
-
-        position: relative;
+        width: 100%;
     }
 
     &__link {
         // navbar__link
         // ---
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 0;
         display: block;
         text-align: center;
         cursor: pointer;
@@ -72,102 +119,50 @@
             // navbar__link:hover::after
             // navbar__link active
             // ---
-            background-color: $primary;
-            color: $white;
-        }
-
-        &.active {
-            // navbar__link active
-            // ---
-            &.navbar__link--dropdown::after {
-                // navbar__link active navbar__link--dropdown::after
-                content: "\f077"; // up chevron
-            }
-        }
-
-        &--dropdown::after {
-            // navbar__link--dropdown::after
-            // ---
-            font-family: FontAwesome;
-            content: "\f078"; // down chevron
-
-            font-size: 0.8rem;
-            padding-left: 0.3rem;
-        }
-    }
-
-    &__dropdown {
-        // navbar__dropdown
-        // ---
-        display: grid;
-        grid-template-columns: 1fr;
-        row-gap: 0.5rem;
-    }
-}
-
-@include max-screen("large") {
-    .navbar {
-        &__items {
-            // navbar__items
-            // ---
-            margin: 1rem 0;
-            width: 100%;
-
-            &.active {
-                display: grid;
-                grid-template-columns: 1fr;
-                grid-auto-flow: row;
-                row-gap: 1rem;
-            }
-        }
-
-        &__dropdown {
-            // navbar__dropdown
-            // ---
-            background-color: darken($color: $primary, $amount: 3%);
-            color: $white;
+            background-color: $darker-colour;
         }
     }
 }
 
-@include min-screen("large") {
+@include respond-to("large") {
     .navbar {
         &__nav {
             // navbar__nav
             // ---
+            // on a large screen, display the menu horizontally
             flex-direction: row;
+        }
+
+        &__mobile {
+            // navbar__mobile
+            // ---
+            width: auto;
+            margin-right: auto;
         }
 
         &__hamburger {
             // navbar__hamburger
             // ---
+            // on a large screen, hide the hamburger
             display: none;
         }
 
         &__items {
             // navbar__items
             // ---
+            // display the items as a horizontal grid
             display: grid;
             grid-template-rows: 1fr;
             grid-auto-flow: column;
-            column-gap: 1rem;
+            column-gap: 0.5rem;
+            margin: 0; // remove the margin at the top and bottom
+
+            // the below styles stop the bar from taking up all the width of the navbar
+            width: auto;
         }
 
-        &__dropdown {
-            // navbar__dropdown
-            // ---
-            position: absolute; // put the subnav below the parent link
-            right: 0;
-            top: 3rem;
-
-            background-color: $white;
-            color: $black;
-
-            flex-direction: column;
-
-            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; // this is a small box shadow
-            // box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); // this is a large box shadow
-            padding: 0.5rem 1.5rem;
+        &__link {
+            padding: 0.5rem 1rem;
         }
     }
 }
