include a few updates

--- a/www/design/src/scss/_main.scss
+++ b/www/design/src/scss/_main.scss
@@ -2,14 +2,15 @@
 // # Do not modify the imports below
 // ###############################################################
 @import "globals/reset";
+@import "globals/utilities";
 
 @import "globals/fonts";
 @import "globals/variables";
 @import "globals/colours";
 
 @import "globals/breakpoints";
+@import "globals/spacing";
 @import "globals/typography";
-@import "globals/utilities";
 @import "globals/container";
 // ###############################################################
 // # Do not modify the imports above
