--- a/www/design/src/scss/globals/_container.scss
+++ b/www/design/src/scss/globals/_container.scss
@@ -1,4 +1,4 @@
-.container {
+@mixin container() {
     margin: {
         left: auto;
         right: auto;
@@ -7,18 +7,22 @@
     width: 100%;
 
     @include respond-to("small") {
-        max-width: 640px;
+        max-width: map_get($breakpoints, "small");
     }
 
     @include respond-to("medium") {
-        max-width: 768px;
+        max-width: map_get($breakpoints, "medium");
     }
 
     @include respond-to("large") {
-        max-width: 1024px;
+        max-width: map_get($breakpoints, "large");
     }
 
     @include respond-to("x-large") {
-        max-width: 1280px;
+        max-width: map_get($breakpoints, "x-large");
+    }
+
+    @include respond-to("xx-large") {
+        max-width: map_get($breakpoints, "xx-large");
     }
 }
